force-app/main/default/objects/Cash_Flow__c/Cash_Flow__c.object-meta.xml
<CustomObject>
    <label>Cash Flow</label>
    <nameField>
        <label>Milestone</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Flow</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>