force-app/main/default/objects/Cash_Flow__c/fields/Amount_AED__c.field-meta.xml
<CustomField>
    <fullName>Amount_AED__c</fullName>
    <formula>IF(
Unit__r.Project_Name_F__c = &apos;POST HOTEL &amp; RESIDENCES By ELIE SAAB&apos;,
Unit__r.Cost_AED_for_CHF__c * Percent__c,
Unit__r.Cost_AED__c * Percent__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>