force-app/main/default/objects/Cash_Flow__c/fields/Amount_GBP__c.field-meta.xml
<CustomField>
    <fullName>Amount_GBP__c</fullName>
    <formula>IF(Unit__r.Project_Name_F__c = &apos;POST HOTEL &amp; RESIDENCES By ELIE SAAB&apos;,
 Price_CHF__c *  Unit__r.Project__r.CHF_To_GBP__c,
 IF(Unit__r.Project_Name_F__c = &apos;Trussardi Residences MIRA VERDE&apos;,
  Price_Formula__c * Unit__r.Project__r.USD_To_GBP__c,
  Price_Formula__c * CURRENCYRATE(&apos;GBP&apos;)
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>