force-app/main/default/objects/Cash_Flow__c/fields/Amount_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Amount_on_Invoice__c</fullName>
    <formula>IF(Unit__r.Project_Name_F__c = &apos;POST HOTEL &amp; RESIDENCES By ELIE SAAB&apos;, Price_CHF__c, Price_Formula__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount on Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>