force-app/main/default/objects/Cash_Flow__c/fields/Cash_Flow_Sum__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow_Sum__c</fullName>
    <label>Cash Flow Sum</label>
    <referenceTo>Cash_Flow_Sum__c</referenceTo>
    <relationshipLabel>Cash Flow</relationshipLabel>
    <relationshipName>Cash_Flow</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>