force-app/main/default/objects/Cash_Flow__c/fields/Cost_CHF_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_CHF_Unit__c</fullName>
    <formula>Unit__r.Cost_CHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost CHF Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>