force-app/main/default/objects/Cash_Flow__c/fields/Due_Date_for_Report__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_for_Report__c</fullName>
    <formula>Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>