force-app/main/default/objects/Cash_Flow__c/fields/Exempt_from_Installment__c.field-meta.xml
<CustomField>
    <fullName>Exempt_from_Installment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt from Installment</label>
    <type>Checkbox</type>
</CustomField>