force-app/main/default/objects/Cash_Flow__c/fields/Installment_Formula_for_Report__c.field-meta.xml
<CustomField>
    <fullName>Installment_Formula_for_Report__c</fullName>
    <formula>Installment_Milestone__c &amp;&quot; - &quot;&amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment</label>
    <type>Text</type>
</CustomField>