force-app/main/default/objects/Cash_Flow__c/fields/Installment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Installment_Milestone__c</fullName>
    <label>Installment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>