force-app/main/default/objects/Cash_Flow__c/fields/Installment_Status__c.field-meta.xml
<CustomField>
    <fullName>Installment_Status__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Received_Amount__c),
        Received_Amount__c = 0
    ),
    &quot;Pending&quot;,
    IF(
        Received_Amount__c &lt; Price_Formula__c,
        &quot;Partially Paid&quot;,
        &quot;Fully Paid&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment Status</label>
    <type>Text</type>
</CustomField>