force-app/main/default/objects/Cash_Flow__c/fields/Is_Additional_Payment__c.field-meta.xml
<CustomField>
    <fullName>Is_Additional_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Additional Payment</label>
    <type>Checkbox</type>
</CustomField>