force-app/main/default/objects/Cash_Flow__c/fields/Is_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Is_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Invoiced</label>
    <type>Checkbox</type>
</CustomField>