force-app/main/default/objects/Cash_Flow__c/fields/Oqood_Registration_For_GFF__c.field-meta.xml
<CustomField>
    <fullName>Oqood_Registration_For_GFF__c</fullName>
    <formula>IF(Name = &quot;Oqood&quot;,
CASE(Unit__r.DLD_Fee_Percentage__c,
&quot;Fully paid by the Purchaser&quot;, 3250,
&quot;Fully paid by the Seller&quot;, 0,
&quot;50% payable by Purchaser, 50% payable by Seller, Purchaser pays all administration fees&quot;, 3250,
&quot;25% payable by Purchaser, 75% payable by Seller, Purchaser pays all administration fees&quot;, 3250,
3250
),
IF(Name = &quot;Registration Fee&quot;,
Unit__r.Cost_AED__c *
CASE(Unit__r.DLD_Fee_Percentage__c,
&quot;Fully paid by the Purchaser&quot;, 0.04,
&quot;Fully paid by the Seller&quot;, 0,
&quot;50% payable by Purchaser, 50% payable by Seller, Purchaser pays all administration fees&quot;, 0.02,
&quot;25% payable by Purchaser, 75% payable by Seller, Purchaser pays all administration fees&quot;, 0.01,
0
),
IF(Constant__c &lt;&gt; 0,
Constant__c,
Unit__r.Cost_AED__c * Percent__c
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oqood &amp; Registration For GFF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>