force-app/main/default/objects/Cash_Flow__c/fields/Payment_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_Formula__c</fullName>
    <formula>IF(
    Received_Amount__c = 0,
    &quot;Pending&quot;,
    IF(
        Received_Amount__c &lt; Price_Formula__c,
        &quot;Partially Paid&quot;,
        &quot;Fully Paid&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>