force-app/main/default/objects/Cash_Flow__c/fields/Price_CHF__c.field-meta.xml
<CustomField>
    <fullName>Price_CHF__c</fullName>
    <formula>IF(Name=&apos;Purchase Taxes&apos;,
Unit__r.Cost_CHF_Number__c * 0.015,
Unit__r.Cost_CHF_Number__c * Percent__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>