force-app/main/default/objects/Cash_Flow__c/fields/Price_Dublication__c.field-meta.xml
<CustomField>
    <fullName>Price_Dublication__c</fullName>
    <label>Price Dublication</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>