force-app/main/default/objects/Cash_Flow__c/fields/Price_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Price_Formatted__c</fullName>
    <formula>Price_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>