force-app/main/default/objects/Cash_Flow__c/fields/Price_GEL__c.field-meta.xml
<CustomField>
    <fullName>Price_GEL__c</fullName>
    <formula>Unit__r.Cost_GEL__c * Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price GEL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>