force-app/main/default/objects/Cash_Flow__c/fields/Screen_Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Screen_Flow_Name__c</fullName>
    <formula>Name+&quot; | &quot;+ TEXT(DAY(Date__c))+&quot;-&quot;+TEXT(MONTH(Date__c))+&quot;-&quot;+TEXT(YEAR(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Screen Flow Name</label>
    <type>Text</type>
</CustomField>