force-app/main/default/objects/Cash_Flow__c/fields/Show_in_Report__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Report__c</fullName>
    <formula>NOT(
  OR(
    CONTAINS(Installment_Milestone__c, &apos;Oqood&apos;),
    CONTAINS(Installment_Milestone__c, &apos;DLD&apos;),
    CONTAINS(Installment_Milestone__c, &apos;Registration&apos;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show in Report</label>
    <type>Checkbox</type>
</CustomField>