force-app/main/default/objects/Cash_Flow__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(Received_Amount__c),
    Received_Amount__c = 0
  ),
  &apos;Pending&apos;,
  IF(
    Received_Amount__c &lt; Price_Formula__c,
    &apos;Partially Paid&apos;,
    &apos;Fully Paid&apos;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>