force-app/main/default/objects/Cash_Flow__c/fields/Total_with_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_with_VAT__c</fullName>
    <formula>Price_Formula__c + VAT_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total with VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>