force-app/main/default/objects/Cash_Flow__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VAT</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>