force-app/main/default/objects/Cash_Flow__c/fields/VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Price_Formula__c)),
        Unit__r.Project__r.Is_VAT_Applicable__c,
        NOT(
            OR(
                Name = &quot;Oqood&quot;,
                Name = &quot;DLD Fee&quot;,
                Name = &quot;Registration Fee&quot;
            )
        )
    ),
    Price_Formula__c * 0.05,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>