force-app/main/default/objects/Cash_Flow__c/fields/Waived_Off__c.field-meta.xml
<CustomField>
    <fullName>Waived_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waived Off</label>
    <type>Checkbox</type>
</CustomField>